EandT/main/default/objects/Class_Attendance__c/Class_Attendance__c.object-meta.xml
<CustomObject>
    <description>The occurrence of a student attending a class.  Used to track what classes they received and paid for, if canceled and fee forfeit for late notice</description>
    <label>Class Attendance</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Class Attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>