EandT/main/default/objects/Class_Attendance__c/fields/Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost__c</fullName>
    <description>If cancelled with more that a day's notice, then no charge for this class, otherwise full cost for the class will be applied</description>
    <formula>IF(  ISPICKVAL( Status__c , "Canceled") &amp;&amp; NOT Cancellation_Fee_Due__c, 0,
IF  (ISPICKVAL( Payment_Method__c, "Casual"), Scheduled_Class__r.Class__r.Casual_Price__c,
    IF  (ISPICKVAL( Payment_Method__c, "Concession Card"),  Scheduled_Class__r.Class__r.Concession_Price__c ,
        IF  (ISPICKVAL(  Payment_Method__c, "On Account"),  Scheduled_Class__r.Class__r.On_Account_Price__c, 0 ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If cancelled with more that a day's notice, then no charge for this class, otherwise full cost for the class will be applied</inlineHelpText>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>