EandT/main/default/objects/Class_Attendance__c/fields/Actual_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sessions__c</fullName>
    <description>Number of session that are charged for attending this class.  If cancelled with more that 1 day's notice then no charge will be applied</description>
    <formula>IF( ISPICKVAL( Status__c , "Canceled") &amp;&amp; NOT Cancellation_Fee_Due__c, 0, Scheduled_Class__r.Class__r.Session_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Sessions</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>