EandT/main/default/objects/Class_Attendance__c/fields/Amount_Owed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Owed__c</fullName>
    <description>Populated whenever a Class Attendance record is created or updated by copying the value in the Actual Cost formula field where the payment type is Casual and the checkbox that shows if the class has been paid for is not set. This is to allow a roll-up summary on the Student record to show unpaid balances</description>
    <label>Amount Owed</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>