EandT/main/default/objects/Class_Attendance__c/fields/Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Date__c</fullName>
    <inlineHelpText>If a person cancels, this can be used to determine if fees are forfeit for late notice</inlineHelpText>
    <label>Cancel Date</label>
    <type>Date</type>
</CustomField>