EandT/main/default/objects/Class_Attendance__c/fields/Cancellation_Fee_Due__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee_Due__c</fullName>
    <description>If less than one day's notice given on cancellation then the class fee is payable</description>
    <formula>Class_Date__c -  Cancel_Date__c &lt;1</formula>
    <label>Cancellation Fee Due</label>
    <type>Checkbox</type>
</CustomField>