EandT/main/default/objects/Class_Attendance__c/fields/Casual_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Casual_Fee_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Casual Fee Paid</label>
    <type>Checkbox</type>
</CustomField>