EandT/main/default/objects/Class_Attendance__c/fields/Class_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Date__c</fullName>
    <formula>Scheduled_Class__r.Class_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Date</label>
    <type>Date</type>
</CustomField>