EandT/main/default/objects/Class_Attendance__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <formula>Scheduled_Class__r.Class__r.Name</formula>
    <label>Class Name</label>
    <type>Text</type>
</CustomField>