EandT/main/default/objects/Class_Attendance__c/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <formula>Scheduled_Class__r.Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Type</label>
    <type>Text</type>
</CustomField>