EandT/main/default/objects/Class_Attendance__c/fields/Concession_Card__c.field-meta.xml
<CustomField>
    <fullName>Concession_Card__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Concession Card</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected Concession Card is not allocated to this Student</errorMessage>
        <filterItems>
            <field>Concession_Card__c.Card_Expired__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Concession_Card__c</referenceTo>
    <relationshipLabel>Class Attendances</relationshipLabel>
    <relationshipName>Class_Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>