EandT/main/default/objects/Class_Attendance__c/fields/Fees_owed__c.field-meta.xml
<CustomField>
    <fullName>Fees_owed__c</fullName>
    <description>Repeat of Fees Owed field on the Contact record so that it is easy for the tutor to see o/s fees when they check the student in to the class</description>
    <formula>Student__r.Fees_owed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Repeat of Fees Owed field on the Contact record so that it is easy for the tutor to see o/s fees when they check the student in to the class</inlineHelpText>
    <label>Total Outstanding Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>