EandT/main/default/objects/Class_Attendance__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Price Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Casual</fullName>
                <default>true</default>
                <label>Casual</label>
            </value>
            <value>
                <fullName>Concession Card</fullName>
            </value>
            <value>
                <fullName>On Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>