EandT/main/default/objects/Class_Attendance__c/fields/Scheduled_Class__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Class__c</fullName>
    <label>Scheduled Class</label>
    <referenceTo>Scheduled_Class__c</referenceTo>
    <relationshipLabel>Class Attendances</relationshipLabel>
    <relationshipName>Class_Attendances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>