EandT/main/default/objects/Class_Attendance__c/fields/Student_email_copy_hidden__c.field-meta.xml
<CustomField>
    <fullName>Student_email_copy_hidden__c</fullName>
    <label>Student email copy (hidden)</label>
    <type>Email</type>
</CustomField>