EandT/main/default/objects/Class_Attendance__c/validationRules/Con_card_class_type_must_match_class_typ.validationRule-meta.xml
<ValidationRule>
    <fullName>Con_card_class_type_must_match_class_typ</fullName>
    <active>true</active>
    <errorConditionFormula>ISPickval( Payment_Method__c , "Concession Card") 
&amp;&amp;
( Scheduled_Class__r.Class__r.Class_Type__c   &lt;>  Concession_Card__r.Class_Type__c )</errorConditionFormula>
    <errorDisplayField>Concession_Card__c</errorDisplayField>
    <errorMessage>The selected Concession card must be for the same class type as the class you are using it on</errorMessage>
</ValidationRule>