EandT/main/default/objects/Class_Attendance__c/validationRules/ConcessionCardExpired.validationRule-meta.xml
<ValidationRule>
    <fullName>ConcessionCardExpired</fullName>
    <active>true</active>
    <description>Throw an error if the concession card selectyedhas already expired</description>
    <errorConditionFormula>Concession_Card__r.Card_Expired__c = TRUE
 &amp;&amp;   ISPICKVAL(Payment_Method__c, "Concession Card")</errorConditionFormula>
    <errorDisplayField>Concession_Card__c</errorDisplayField>
    <errorMessage>The Concession Card selected has expired</errorMessage>
</ValidationRule>