EandT/main/default/objects/Class_Attendance__c/validationRules/ConcessionCardRateNeedsCardAttached.validationRule-meta.xml
<ValidationRule>
    <fullName>ConcessionCardRateNeedsCardAttached</fullName>
    <active>true</active>
    <description>If value of Concession card is chosen for the price basis, then a valid concession card must be attached to the class attendance</description>
    <errorConditionFormula>ISPICKVAL(Payment_Method__c, "Concession Card") &amp;&amp;  (Concession_Card__c  = "")</errorConditionFormula>
    <errorDisplayField>Concession_Card__c</errorDisplayField>
    <errorMessage>If Price Basis is "Concession Card" then you must allocate a Concession card to this Class Attendance</errorMessage>
</ValidationRule>