EandT/main/default/objects/Class_Attendance__c/validationRules/ConcessionCardUsedButNotConcardMethod.validationRule-meta.xml
<ValidationRule>
    <fullName>ConcessionCardUsedButNotConcardMethod</fullName>
    <active>true</active>
    <description>If a concession card is entered in the record, then the price basis must be "Concession Card"</description>
    <errorConditionFormula>(Concession_Card__c != "") &amp;&amp;
NOT ISPICKVAL(Payment_Method__c, "Concession Card")</errorConditionFormula>
    <errorDisplayField>Payment_Method__c</errorDisplayField>
    <errorMessage>If a Concession Card has been allocated to this Class Attendance, then the  Price Basis must be "Concession Card"</errorMessage>
</ValidationRule>