EandT/main/default/objects/Class_Attendance__c/validationRules/IfCanceledRequireCancellationDate.validationRule-meta.xml
<ValidationRule>
    <fullName>IfCanceledRequireCancellationDate</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c, "Canceled")  &amp;&amp; 
 ISNULL( Cancel_Date__c )</errorConditionFormula>
    <errorDisplayField>Cancel_Date__c</errorDisplayField>
    <errorMessage>If Status is Canceled then you must enter a cancellation date so that late cancellation charges can be assessed.</errorMessage>
</ValidationRule>