EandT/main/default/objects/Class_Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class_Date__c</columns>
    <columns>Student__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Actual_Cost__c</columns>
    <columns>Concession_Card__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>