EandT/main/default/objects/Class_Attendance__c/listViews/Last7Days_Classes.listView-meta.xml
<ListView>
    <fullName>Last7Days_Classes</fullName>
    <columns>Class_Name__c</columns>
    <columns>Class_Date__c</columns>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Status__c</columns>
    <columns>Cancel_Date__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Concession_Card__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Last 7 days Classes</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>