EandT/main/default/objects/Class_Attendance__c/listViews/My_Upcoming_Classes.listView-meta.xml
<ListView>
    <fullName>My_Upcoming_Classes</fullName>
    <columns>Class_Date__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Concession_Card__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Actual_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>My Upcoming Classes</label>
</ListView>